tests/snapshots/snapshots__counter_a11y_tree.snap
---
source: tests/snapshots.rs
expression: app.a11y_tree()
---
group
  text "Count: 0"
  button "-"
  button "+"
