tests/snapshots/snapshots__counter_render_tree.snap
---
source: tests/snapshots.rs
expression: app.render_tree()
---
Col
  Text "Count: 0"
  Button "-"
  Button "+"
